# cpp_starter

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  LICENSE  README.md  conanfile.txt
cmake/: Conan.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt  main.cpp  sum.cpp  sum.h
src/test/: CMakeLists.txt  test_sum.cpp
