cmake_minimum_required(VERSION 3.15)

project(cpp_starter CXX)
include(cmake/StandardProjectSettings.cmake)
include(cmake/PreventInSourceBuilds.cmake)

# Link this 'library' to set the c++ standard / compile-time options requested
add_library(project_options INTERFACE)
target_compile_features(project_options INTERFACE cxx_std_20)

# Link this 'library' to use the warnings specified in CompilerWarnings.cmake
add_library(project_warnings INTERFACE)

# standard compiler warnings
include(cmake/CompilerWarnings.cmake)
set_project_warnings(project_warnings)

# sanitizer options if supported by compiler
include(cmake/Sanitizers.cmake)
enable_sanitizers(project_options)

# enable doxygen
include(cmake/Doxygen.cmake)
enable_doxygen()

# allow for static analysis options
include(cmake/StaticAnalyzers.cmake)

# Enable CTest
enable_testing()

find_package(ABSL REQUIRED)
find_package(BENCHMARK REQUIRED)
find_package(BOOST REQUIRED)
find_package(GTEST REQUIRED)
find_package(SPDLOG REQUIRED)

add_subdirectory(src)
